--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="nombre d-flex justify-content-center align-items-center">
 <div class="nombre2" [formGroup]="form">
-    <h1 class="nombre3 d-flex justify-content-center"><B>Vehiculo</B></h1>
+    <span class="n6 d-flex justify-content-center"><B>{{'Vehiculo'| uppercase}}</B></span>
     <mat-divider></mat-divider>
     <div class="nombre3 d-flex justify-content-end">
     <div class="n4 p-2 bd-highlight">MARCA:</div>
-    <mat-form-field appearance="fill">
+    <mat-form-field>
         <mat-label>Selecciona una marca</mat-label>
         <mat-select formControlName="vehiculo">
           <mat-option [value]="item.iIdMarca" *ngFor="let item of marcas">{{item.sMarca}}</mat-option>
@@ -16,7 +16,7 @@
     </div>
       <div class="nombre3 d-flex justify-content-end">
         <div class="n4 p-2 bd-highlight">SUBMARCA:</div>
-      <mat-form-field appearance="fill">
+      <mat-form-field >
         <mat-label>Selecciona una submarca</mat-label>
         <mat-select formControlName="submarca">
           <mat-option [value]="item.iIdSubMarca" *ngFor="let item of submarca">{{item.sSubMarca}}</mat-option>
@@ -28,7 +28,7 @@
     </div>
       <div class="nombre3 d-flex justify-content-end">
         <div class="n4 p-2 bd-highlight">MODELO:</div>
-      <mat-form-field appearance="fill">
+      <mat-form-field >
         <mat-label>Selecciona una modelo</mat-label>
         <mat-select formControlName="modelo">
           <mat-option [value]="item.iIdModelo" *ngFor="let item of modelo">{{item.sModelo}}</mat-option>
@@ -40,7 +40,7 @@
     </div>
       <div class="nombre3 d-flex justify-content-end">
         <div class="n4 p-2 bd-highlight">DESCRIPCION:</div>
-      <mat-form-field appearance="fill">
+      <mat-form-field >
         <mat-label>Selecciona una descripción de modelo</mat-label>
         <mat-select formControlName="descripcion">
           <mat-option [value]="item.iIdDescripcionModelo" *ngFor="let item of descripcion">{{item.sDescripcion}}</mat-option>
@@ -50,11 +50,11 @@
           </mat-error>
       </mat-form-field>
     </div>
-    <h1 class="nombre3 d-flex justify-content-center"><B>Domicilio</B></h1>
+    <span class="n6 d-flex justify-content-center"><B>{{'Domicilio'| uppercase}}</B></span>
     <mat-divider></mat-divider>
     <div class="nombre3 d-flex justify-content-end">
         <div class="n4 p-2 bd-highlight"> POSTAL:</div>
-        <mat-form-field appearance="fill" hintLabel="Max 5 caracteres">
+        <mat-form-field hintLabel="Max 5 caracteres">
             <mat-label>Codigo Postal</mat-label>
             <input matInput oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" type="number" #input maxlength="5"
             formControlName="codigo" (keyup.enter)="getpostalcode()">
@@ -66,7 +66,7 @@
     </div>
     <div class="nombre3 d-flex justify-content-end">
         <div class="n4 p-2 bd-highlight">ESTADO:</div>
-        <mat-form-field appearance="fill">
+        <mat-form-field >
             <mat-label>Estado</mat-label>
             <input matInput formControlName="estado">
             <mat-error *ngIf="form.get('estado').hasError('required')">
@@ -76,7 +76,7 @@
     </div>
     <div class="nombre3 d-flex justify-content-end">
         <div class="n4 p-2 bd-highlight">MUNICIPIO:</div>
-        <mat-form-field appearance="fill">
+        <mat-form-field >
             <mat-label>Municipio</mat-label>
             <input matInput formControlName="municipio">
             <mat-error *ngIf="form.get('municipio').hasError('required')">
@@ -86,7 +86,7 @@
     </div>
     <div class="nombre3 d-flex justify-content-end">
     <div class="n4 p-2 bd-highlight">COLONIA:</div>   
-    <mat-form-field appearance="fill">
+    <mat-form-field >
         <mat-label>Colonia</mat-label>
         <mat-select formControlName="colonia">
           <mat-option value="item.iIdUbicacion" *ngFor= "let item of ubicacion">{{item.sUbicacion}}</mat-option>
@@ -105,11 +105,11 @@
           </mat-form-field>
     </div>
     -->
-    <h1 class="nombre3 d-flex justify-content-center"><B>Persona</B></h1>
+    <span class="n6 d-flex justify-content-center"><B>{{'Persona'| uppercase}}</B></span>
     <mat-divider></mat-divider>
     <div class="nombre3 d-flex justify-content-end">
     <div class="n5 p-2 bd-highlight">FECHA:</div>
-    <mat-form-field appearance="fill">
+    <mat-form-field >
         <mat-label>Ingresar fecha de nacimiento</mat-label>
         <input matInput [matDatepicker]="picker" formControlName="fecha">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -120,7 +120,7 @@
       </mat-form-field>
       </div>
       
-      <button class="Center d-flex justify-content-center" mat-raised-button color="primary"(click)="getsuccess()">COTIZAR</button>
+      <button class="button Center d-flex justify-content-center" mat-raised-button (click)="getsuccess()">COTIZAR</button>
     
 </div></div>
 
